--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&display=swap');
+
+@font-face {
+  font-family: 'CircularMedium';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./assets/fonts/circular-medium.ttf');
+}
+
+@font-face {
+  font-family: 'CircularBook';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./assets/fonts/circular-book.ttf');
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  box-sizing: inherit;
 }
