--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,9 +18,18 @@
   src: url('./assets/fonts/circular-book.ttf');
 }
 
+@font-face {
+  font-family: 'CircularStd-Book';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./assets/fonts/CircularStd-Book.ttf');
+}
+
 body {
   margin: 0;
   padding: 0;
   font-size: 16px;
+  color: #3e3e3e;
+  font-family: 'CircularStd-Book';
   box-sizing: inherit;
 }
